src/css/styles.css
/* ... */
@-webkit-keyframes spin2 {
  from {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(359deg);
            transform: rotate(359deg);
  }
}
@keyframes spin2 {
  from {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(359deg);
            transform: rotate(359deg);
    -webkit-transform: rotate(359deg);
            transform: rotate(359deg);
  }
}
/** END of loader */

header .anchor {
  fill: #00ec00;
  display: flex;
  justify-content: center;
  cursor: pointer;
  opacity: 0.5;
  padding-right: 10px;
}
header .anchor.hidden {
  display: none;
}
header .anchor:hover {
  opacity: 1;
}

header .logo.unsaved::after {
  width: 7px;
  height: 7px;
  background-color: red;
  border-radius: 50%;
  content: "";
  top: -2px;
  right: -2px;
  position: absolute;
}

header .logo:hover {
  transform: scale(1.2);
}

header .logo:active {
  transform: scale(0.9);
}


.preview {
  background: white;
  flex: 1;
  padding: 10px;
  height: 100%;
  overflow-y: auto;
  margin: auto;
}
.preview .cover {
  background-position: center;
  background-size: cover;
  height: 25vh;
  width: 100%;
  margin-bottom: 16px;
}


.clickable {
  cursor: pointer;
}

/****** markdown *********/

.markdown-body {
  box-sizing: border-box;
  /* min-width: 200px; */
  max-width: 980px;
  margin: 0 auto;
  padding: 45px;
}
.preview.markdown-body {
  padding-bottom: 50px;
}

@media (max-width: 767px) {
  .markdown-body {
    padding: 15px;
  }
}

/****** markdown *********/

.terminal {
  flex: 1;
  font-family: monospace;
  margin: 0px;
  width: 100%;
  height: auto;
  background: black;
  color: #00ec00;
  font-size: 25px;
  padding: 10px;
  padding-top: 60px;
  outline-color: red;
  resize: none;
  border: none;
}

.notification {
  position: fixed;
  right: 5px;
  min-width: 30%;
  max-width: 80%;
  background: #000;
  color: #fff;
  text-align: center;
  padding: 10px;
  margin: auto;
  border-radius: 4px;
  border: 2px solid rgba(255, 255, 255, 0.25);
  top: -100%;
  transition: all 0.25s cubic-bezier(1, 0, 0.7, 1);
  cursor: pointer;
  z-index: 10;
}

.notification.info {
  border: 1px solid rgba(0, 123, 255, 0.85);
  background: rgba(0, 123, 255, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.success {
  border: 1px solid rgba(0, 255, 0, 0.85);
  background: rgba(0, 255, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.error {
  border: 1px solid rgba(255, 0, 0, 0.85);
  background: rgba(255, 0, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

.notification.warning {
  border: 1px solid rgba(255, 255, 0, 0.85);
  background: rgba(255, 255, 0, 0.85);
  top: 5px;
  transition: all 0.5s linear;
}

/****** custom scrollbar *********/

::-webkit-scrollbar {
  width: 5px;
}

/* Track */

::-webkit-scrollbar-track {
  background: black;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: grey;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: yellow;
}

/****** custom scrollbar *********/

/****** commander *********/

.commander {
  top: 1px;
  position: absolute;
  z-index: 10;
  display: flex;
  justify-content: center;
  width: 100%;
  max-width: 600px;
  min-width: 250px;
  margin: 0 auto;
  left: 0;
  right: 0;
}

.commander .palette {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 8px 8px 0 8px;
  display: flex;
  flex-direction: column;
  max-height: 100vh;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.commander .palette>div {
  display: flex; 
  min-height: 40px;
} 

.commander .palette ul {
  color: white;
  list-style: none;
  margin: 0;
  padding: 0;
  margin: 8px 0;
  overflow-y: auto;
}

.commander .palette ul li {
  padding: 0 2px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  opacity: 0.5;
  padding-left: 10px;
  cursor: pointer;
}

.commander .palette ul li.selected {
  background-color: rgba(255, 255, 255, 0.25);
  opacity: 1;
  border-left: 2px solid red;
  padding-left: 8px;
  font-size: 1.15em;
}
.commander .palette ul li:hover img {
  width: 35px;
}
.commander .palette ul li.selected img {
  width: 40px;
}

.commander .palette ul li:hover {
  opacity: 1;
  border-left: 2px solid red;
  padding-left: 8px;
}

.commander .palette input {
  background-color: #424242;
  color: white;
  padding: 5px;
  border: none;
  border-radius: 4px;
  flex-grow: 1;
}

.commander .palette button {
  border: none;
  background: transparent;
  color: rgba(255, 255,255, 0.75);
  font-size: medium;
  padding: 0 1em;
  cursor: pointer;
}
.commander .palette button:focus,
.commander .palette button:hover {
  color: rgba(255, 255,255, 1);
}

.commander .palette ul li a {
  color: white;
  text-decoration: none;
  flex-grow: 1;
  padding: 10px 0;
}

.commander .palette ul li>div {
  padding: 10px 0;
  cursor: pointer;
  flex-grow: 1;
}

/****** commander *********/

/****** menu *********/

.secondary {
  opacity: 0.5;
  align-self: left;
  font-size: small;
}

.divider {
  width: 1px;
  height: 15px;
  background: rgba(255, 255, 255, 0.25);
  margin: 0 10px;
}

.menu {
  display: flex;
  align-items: center;
  max-height: 100%;
  cursor: pointer;
}

.menu:after {
  content: '\22EE';
  font-size: 30px;
  color: rgba(255, 255, 255, 0.7);
  line-height: 1;
}

.menu:hover:after {
  color: rgba(255, 255, 255, 1);
}

/****** menu *********/

code {
  cursor: pointer;
}

pre {
  position: relative;
}

pre button {
  position: absolute;
  top: 10px;
  right: 10px;
}

.console {
  cursor: pointer;
  color: #fff;
  background-color: rgb(14, 22, 40);
  bottom: 0;
  position: fixed;
  width: 100%;
  height: 20vh;
  padding: 20px;
  box-shadow: 2px -4px 10px rgba(0,0,0,.2);
  bottom: 0px;
  transition: all 0.5s linear;
  z-index: 1;
}
/* ... */

